--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "simple-peer": "^9.10.0",
     "socket.io-client": "^4.0.0",
+    "styled-components": "^5.2.2",
     "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^1.1.1"
   },
